objects/Pricing_Template__c.object
<CustomObject>
    <fields>
        <fullName>Account_Setup_Notes_c__c</fullName>
        <description>This field allows for notes to be sent from the pricing template to Account setup &amp; then express setup team.</description>
        <inlineHelpText>Put in text here that you want the express setup team to see (Instructions to the team)</inlineHelpText>
        <label>Account Setup Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Acct_Auto_Setup__c</fullName>
        <description>Whether account will be automatically setup or not</description>
        <inlineHelpText>E = Auto
I = Incomplete (will go to the que)</inlineHelpText>
        <label>Account Auto Setup</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                    <default>true</default>
                    <label>I</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Back_Orders_Allowed__c</fullName>
        <label>Back Orders Allowed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Block_PrintOnDemand__c</fullName>
        <label>Block PrintOnDemand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Block_TechDepot__c</fullName>
        <label>Block TechDepot</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contarct_Number_9_Question__c</fullName>
        <label>Contarct Number 9 Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Desc_10_Question__c</fullName>
        <label>Contract Desc 10 Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Desc_10__c</fullName>
        <label>Contract Desc 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Desc_1_Question__c</fullName>
        <label>Contract Desc 1 Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Desc_1__c</fullName>
        <label>Contract Desc 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Desc_2_Question__c</fullName>
        <label>Contract Desc 2 Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Desc_2__c</fullName>
        <label>Contract Desc 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Number_10_Question__c</fullName>
        <label>Contract Number 10 Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Number_10__c</fullName>
        <label>Contract Number 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Number_1_Question__c</fullName>
        <label>Contract Number 1 Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Number_1__c</fullName>
        <label>Contract Number 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Number_2_Question__c</fullName>
        <label>Contract Number 2 Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Number_2__c</fullName>
        <label>Contract Number 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostCenter_label__c</fullName>
        <label>CostCenter label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_of_accounts__c</fullName>
        <description>Used in Org Hierarchy Page</description>
        <label>Count of accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust_Prod_Xref_Question__c</fullName>
        <label>Cust Prod Xref Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_Prod_Xref__c</fullName>
        <label>Cust Prod Xref</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Code_Question__c</fullName>
        <label>Delivery Code Question</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Code__c</fullName>
        <label>Delivery Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desktop_Label__c</fullName>
        <label>Desktop Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclude_Universal_Pricing_QID__c</fullName>
        <label>Exclude Universal Pricing QID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclude_Universal_Pricing__c</fullName>
        <inlineHelpText>1 Yes
2  No</inlineHelpText>
        <label>Exclude Universal Pricing</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freight_Charge__c</fullName>
        <description>(Small Order Fee Flag)</description>
        <label>Freight Charge</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frieght_Charge_Question__c</fullName>
        <label>Frieght_Charge_Question</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Floor_Percent_Question__c</fullName>
        <label>GP Floor Percent Question</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Floor_Percernt__c</fullName>
        <label>GP Floor Percent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loyalty_Question_ID__c</fullName>
        <label>Loyalty_Question_ID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loyalty__c</fullName>
        <label>Loyalty</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_Order_Value__c</fullName>
        <label>Minimum Order Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Off_Contract_Code_Question__c</fullName>
        <label>Off Contract Code Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Off_Contract_Code__c</fullName>
        <inlineHelpText>1 List Less
2 Retail Less
3 Cost Up</inlineHelpText>
        <label>Off Contract Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Off_Contract_Percent_Question__c</fullName>
        <label>Off Contract Percent Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Off_Contract_Percent__c</fullName>
        <label>Off Contract Percent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Off_Wholesale_Code_Question__c</fullName>
        <label>Off Wholesale Code Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Off_Wholesale_Code__c</fullName>
        <inlineHelpText>1 List Less
2  Cost Up</inlineHelpText>
        <label>Off Wholesale Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Off_Wholesale_Percent_Question__c</fullName>
        <label>Off Wholesale Percent Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Off_Wholesale_Percent__c</fullName>
        <label>Off Wholesale Percent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Orders__c</fullName>
        <label>Online Orders</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Label__c</fullName>
        <label>PO Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Id_Question__c</fullName>
        <label>Parent Id Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Id__c</fullName>
        <label>Parent Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Plain_Id_Question__c</fullName>
        <label>Price Plain Id Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Plan_Id__c</fullName>
        <label>Price Plan Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Desired_Backend__c</fullName>
        <label>Pricing Desired Backend</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Discount_Percent__c</fullName>
        <label>Pricing Discount Percent</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pricing_Price_Type__c</fullName>
        <label>Pricing Price Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Special_Restriction_Type__c</fullName>
        <label>Pricing Special Restriction Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Special_Restrictions__c</fullName>
        <label>Pricing Special Restrictions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Template_Notes__c</fullName>
        <inlineHelpText>Notes on this particular Template</inlineHelpText>
        <label>Pricing Template Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pricing_number_of_SKUs__c</fullName>
        <label>Pricing number of SKUs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority_10_Question__c</fullName>
        <label>Priority 10 Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_10__c</fullName>
        <label>Priority 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_1_Question__c</fullName>
        <label>Priority 1 Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_1__c</fullName>
        <label>Priority 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_2_Question__c</fullName>
        <label>Priority 2 Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_2__c</fullName>
        <label>Priority 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Label__c</fullName>
        <label>Release Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Band_QID__c</fullName>
        <label>Revenue_Band_QID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Band__c</fullName>
        <label>Revenue Band</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMDeliveryFee_QID__c</fullName>
        <label>SMDeliveryFee_QID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMDeliveryFee__c</fullName>
        <label>SMDeliveryFee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Role__c</fullName>
        <label>Sales Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Substitutions_Allowed__c</fullName>
        <label>Substitutions Allowed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <externalId>true</externalId>
        <label>Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_code__c</fullName>
        <externalId>true</externalId>
        <label>Template_code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tiered_Discount_QID__c</fullName>
        <label>Tiered_Discount_QID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tiered_Discounts__c</fullName>
        <label>Tiered Discounts</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Pricing Template</label>
    <listViews>
        <fullName>Has_Parent</fullName>
        <columns>NAME</columns>
        <columns>Parent_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Parent_Id__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Has_Parent</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>test</fullName>
        <columns>NAME</columns>
        <columns>Template__c</columns>
        <columns>Acct_Auto_Setup__c</columns>
        <filterScope>Everything</filterScope>
        <label>test</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Pricing Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>